--- a/AccountApp.csproj
+++ b/AccountApp.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <LangVersion>10</LangVersion>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <PropertyGroup>
